<resources>
    <string name="app_name">FlywayExample</string>


    <string name="action_settings">Settings</string>

    <string name="dogTable">Dog table</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="race">Race</string>
    <string name="reset">Reset</string>
    <string name="newDog">New dog</string>
    <string name="add">Add</string>
</resources>
