<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dogTable"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/id"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/name"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/color"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/race"
            />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tableBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />

    <Button
        android:id="@+id/bt_deleteTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/reset"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="#000000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newDog"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        />

    <EditText
        android:id="@+id/et_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/color"
        />

    <EditText
        android:id="@+id/et_race"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/race"
        />

    <Button
        android:id="@+id/bt_addRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/add"
        />

</LinearLayout>